# tgvmax-watch

./: .gitignore  CLAUDE.md  README.md  cities.yaml  pyproject.toml
docs/superpowers/notes/: sncf-connect-endpoint.md
docs/superpowers/plans/: 2026-05-29-cheap-paid-trains.md
docs/superpowers/specs/: 2026-05-29-cheap-paid-trains-design.md
scripts/: cron.sh
src/tgvmax_watch/: __init__.py  api.py  config.py  main.py  notify.py  paidsweep.py  pricing.py  ranker.py  report.py  routing.py
tests/: conftest.py  test_config_paid.py  test_paidsweep.py  test_pricing_convert.py  test_pricing_parser.py  test_pricing_provider.py  test_pricing_types.py  test_ranker_price.py  test_report_price.py  test_smoke.py  test_train_price.py
tests/fixtures/: sncf_connect_search.json
