[project]
name = "tgvmax-watch"
version = "0.1.0"
description = "Nightly TGVmax (Max Jeune) availability sweep for Paris weekend trips."
authors = [
    { name = "Musel25", email = "muselemmanuel@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[project.scripts]
tgvmax-watch = "tgvmax_watch.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: hits the real SNCF Connect endpoint; deselected by default",
]
addopts = "-m 'not live'"
